[gd_scene load_steps=25 format=3 uid="uid://0vyoyoq3ss4k"]

[ext_resource type="Script" uid="uid://codawr6rnwx6a" path="res://UI/quincy_safe_password_num_enter.gd" id="1_o3pfh"]
[ext_resource type="Texture2D" uid="uid://cvt34e4714a7e" path="res://UI/Assets/Quincy Safe/Quincy Safe UI Framework.png" id="2_vyymo"]
[ext_resource type="Texture2D" uid="uid://drm7v4b0vsp2o" path="res://UI/Assets/Quincy Safe/Quincy Safe.png" id="3_hhm38"]
[ext_resource type="Texture2D" uid="uid://btq0yata1pdf8" path="res://UI/Assets/Pager/Buttons/Pager UI Right Normal.png" id="4_gd7it"]
[ext_resource type="Texture2D" uid="uid://bu5rg5144vilx" path="res://UI/Assets/Quincy Safe/Quincy Safe Up Normal.png" id="4_jiuq0"]
[ext_resource type="Texture2D" uid="uid://b2xddvgg3o8w3" path="res://UI/Assets/Quincy Safe/Quincy Safe Up Pressed.png" id="5_cpa2h"]
[ext_resource type="Texture2D" uid="uid://dv0hqxfkso8xb" path="res://UI/Assets/Pager/Buttons/Pager UI Left Normal.png" id="5_e84oo"]
[ext_resource type="Texture2D" uid="uid://2jfmxycxopeg" path="res://UI/Assets/Quincy Safe/Quincy Safe Down Normal.png" id="6_cgu2x"]
[ext_resource type="Texture2D" uid="uid://n21mywrvi7ij" path="res://UI/Assets/Interactions/Back orange normal.png" id="7_3hqan"]
[ext_resource type="Texture2D" uid="uid://dd35oojlhyn1p" path="res://UI/Assets/Quincy Safe/Quincy Safe Down Pressed.png" id="7_coyxl"]
[ext_resource type="Texture2D" uid="uid://dxfrr333thc3t" path="res://UI/Assets/Interactions/Back orange hovered.png" id="8_gd7it"]
[ext_resource type="Texture2D" uid="uid://k7dgsk71ei4b" path="res://UI/Assets/Quincy Safe/Quincy Safe Enter Normal.png" id="10_xsed0"]
[ext_resource type="Texture2D" uid="uid://bv58ny2bsamlo" path="res://UI/Assets/Quincy Safe/Quincy Safe Enter Pressed.png" id="11_1kti5"]

[sub_resource type="InputEventKey" id="InputEventKey_334fl"]
device = -1
keycode = 4194320

[sub_resource type="Shortcut" id="Shortcut_bw266"]
events = [SubResource("InputEventKey_334fl")]

[sub_resource type="InputEventKey" id="InputEventKey_5a0kc"]
device = -1
keycode = 4194322

[sub_resource type="Shortcut" id="Shortcut_epsu3"]
events = [SubResource("InputEventKey_5a0kc")]

[sub_resource type="InputEventKey" id="InputEventKey_pk78s"]
device = -1
keycode = 4194321

[sub_resource type="Shortcut" id="Shortcut_4tuoy"]
events = [SubResource("InputEventKey_pk78s")]

[sub_resource type="InputEventKey" id="InputEventKey_58u4i"]
device = -1
keycode = 4194319

[sub_resource type="InputEventKey" id="InputEventKey_tqyeg"]
device = -1
keycode = 4194308

[sub_resource type="Shortcut" id="Shortcut_uqwby"]
events = [SubResource("InputEventKey_58u4i"), SubResource("InputEventKey_tqyeg")]

[sub_resource type="InputEventKey" id="InputEventKey_apejm"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_n0say"]
events = [SubResource("InputEventKey_apejm")]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_o3pfh")

[node name="Label" type="Label" parent="."]
offset_left = 530.0
offset_top = 296.0
offset_right = 911.0
offset_bottom = 387.0
text = "Input"

[node name="QuincySafeUiFramework" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_vyymo")
centered = false

[node name="QuincySafe" type="Sprite2D" parent="."]
position = Vector2(965, 560)
texture = ExtResource("3_hhm38")

[node name="Up" type="TextureButton" parent="."]
offset_left = 865.0
offset_top = 555.0
offset_right = 930.0
offset_bottom = 600.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_bw266")
shortcut_in_tooltip = false
texture_normal = ExtResource("4_jiuq0")
texture_pressed = ExtResource("5_cpa2h")
texture_hover = ExtResource("4_jiuq0")

[node name="Down" type="TextureButton" parent="."]
offset_left = 865.0
offset_top = 600.0
offset_right = 930.0
offset_bottom = 645.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_epsu3")
shortcut_in_tooltip = false
texture_normal = ExtResource("6_cgu2x")
texture_pressed = ExtResource("7_coyxl")
texture_hover = ExtResource("6_cgu2x")

[node name="Next" type="TextureButton" parent="."]
offset_left = 961.0
offset_top = 250.0
offset_right = 1016.0
offset_bottom = 305.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_4tuoy")
shortcut_in_tooltip = false
texture_normal = ExtResource("4_gd7it")

[node name="Backspace" type="TextureButton" parent="."]
offset_left = 886.0
offset_top = 249.0
offset_right = 926.0
offset_bottom = 289.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_uqwby")
shortcut_in_tooltip = false
texture_normal = ExtResource("5_e84oo")

[node name="Enter" type="TextureButton" parent="."]
offset_left = 940.0
offset_top = 560.0
offset_right = 1005.0
offset_bottom = 640.0
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_n0say")
shortcut_in_tooltip = false
texture_normal = ExtResource("10_xsed0")
texture_pressed = ExtResource("11_1kti5")
texture_hover = ExtResource("10_xsed0")

[node name="Exit" type="TextureButton" parent="."]
offset_left = 94.0
offset_top = 28.0
offset_right = 194.0
offset_bottom = 128.0
texture_normal = ExtResource("7_3hqan")
texture_pressed = ExtResource("8_gd7it")
texture_hover = ExtResource("8_gd7it")

[connection signal="pressed" from="Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Backspace" to="." method="_on_backspace_pressed"]
[connection signal="pressed" from="Enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
